{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 21,
  "lineage": "ab6e330d-a5b4-6716-e15d-da4d4ce6cc36",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192379350719:vpc/vpc-e863bf83",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-32d5e35a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ae7cfcc5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-e863bf83",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-59ed8832",
            "owner_id": "192379350719",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00edfb46b107f643c",
            "arn": "arn:aws:ec2:ap-northeast-2:192379350719:instance/i-0770215c68902563d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0770215c68902563d",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "somul_backend",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0889f2ce508c58fe0",
            "private_dns": "ip-172-31-39-65.ap-northeast-2.compute.internal",
            "private_ip": "172.31.39.65",
            "public_dns": "ec2-13-209-77-3.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.77.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d27a9c4eb4b805e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "server-prod-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b8271af4",
            "tags": {
              "Name": "server-prod-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06619eebf404a3511"
            ]
          },
          "dependencies": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:loadbalancer/net/server-prod-nlb/bedb34e43848668b",
            "arn_suffix": "net/server-prod-nlb/bedb34e43848668b",
            "dns_name": "server-prod-nlb-bedb34e43848668b.elb.ap-northeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:loadbalancer/net/server-prod-nlb/bedb34e43848668b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "server-prod-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4fbf0534"
              },
              {
                "subnet_id": "subnet-6ab97001"
              },
              {
                "subnet_id": "subnet-b8271af4"
              }
            ],
            "subnets": [
              "subnet-4fbf0534",
              "subnet-6ab97001",
              "subnet-b8271af4"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-e863bf83",
            "zone_id": "ZIBE1TIR4HY56"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "server_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:listener/net/server-prod-nlb/bedb34e43848668b/2e7441b43443b356",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:192379350719:certificate/a4a9727f-8742-4965-a5f6-ca8bf34050e3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:targetgroup/server-prod-target-group/8262d467080c1967",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:listener/net/server-prod-nlb/bedb34e43848668b/2e7441b43443b356",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:loadbalancer/net/server-prod-nlb/bedb34e43848668b",
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.server_lb",
            "aws_lb_target_group.server_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "server_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:targetgroup/server-prod-target-group/8262d467080c1967",
            "arn_suffix": "targetgroup/server-prod-target-group/8262d467080c1967",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:targetgroup/server-prod-target-group/8262d467080c1967",
            "lambda_multi_value_headers_enabled": false,
            "name": "server-prod-target-group",
            "port": 8000,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-e863bf83"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server_cluster_attachment",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:targetgroup/server-prod-target-group/8262d467080c1967-20200425155724365300000001",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:192379350719:targetgroup/server-prod-target-group/8262d467080c1967",
            "target_id": "i-0770215c68902563d"
          },
          "dependencies": [
            "aws_instance.server",
            "aws_lb_target_group.server_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:192379350719:security-group/sg-06619eebf404a3511",
            "description": "Allow every traffics to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06619eebf404a3511",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "server-prod-security-group",
            "name_prefix": null,
            "owner_id": "192379350719",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-e863bf83"
          }
        }
      ]
    }
  ]
}